# llm-multimodal

./: Cargo.toml  LICENSE  README.md  build.rs
.github/: golden-fixtures-requirements.txt
.github/workflows/: ci.yml  golden-fixtures.yml
benches/: image_preprocess.rs
scripts/: generate_qwen_preprocess_fingerprints.py  generate_vision_golden.py
src/: encoder_inputs.rs  error.rs  hasher.rs  hub.rs  jpeg_turbo.rs  lib.rs  media.rs  mod.rs  opencv_buffer.rs  opencv_buffer_capture.cpp  registry.rs  tracker.rs  types.rs  video.rs
src/audio/: decode.rs  mod.rs  processor.rs  transforms.rs
src/audio/processors/: inkling.rs  mod.rs  qwen3_audio.rs
src/audio/processors/fixtures/: generate_inkling_dmel_parity.py  inkling_dmel_parity.json
src/registry/: inkling.rs  kimi_k25.rs  llama4.rs  llava.rs  minimax_m3.rs  mod.rs  phi3_v.rs  qwen3_asr.rs  qwen3_omni.rs  qwen3_vl.rs  qwen_vl.rs  tml.rs  traits.rs
src/vision/: execution.rs  image_processor.rs  mod.rs  preprocessor_config.rs  processor.rs  scratch.rs  transforms.rs  video_processor.rs
src/vision/processors/: inkling.rs  kimi_k25.rs  llama4_vision.rs  llava.rs  minimax_m3.rs  mod.rs  phi3_vision.rs  phi4_vision.rs  pixtral.rs  qwen2_vl.rs  qwen3_omni_vision.rs  qwen3_vl.rs  qwen_vl_base.rs  tml.rs
tests/: decode_preprocess_bench.rs  multimodal_tracker_test.rs  preprocess_fingerprint.rs  qwen_preprocess_golden.rs  resize_fingerprint.rs  vision_golden_tests.rs
tests/fixtures/golden/: qwen_preprocess_fingerprints.json
