[package]
name = "llm-multimodal"
version = "1.5.0"
edition = "2021"
description = "Multimodal processing for vision and other modalities"
license = "Apache-2.0"
repository = "https://github.com/vllm-project/llm-multimodal"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
]
keywords = ["vision", "multimodal", "image-processing", "llm"]
categories = ["multimedia::images", "science"]

[lib]
name = "llm_multimodal"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
base64 = "0.22"
bytes = { version = "1.8.0", features = ["serde"] }
fast_image_resize = { version = "6.0.0", features = ["image"] }
image = { version = "0.25.4", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff", "webp"] }
ndarray = "0.17"
once_cell = "1.21.3"
reqwest = { version = "0.12.8", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = "3.12"
thiserror = "2.0.12"
tokio = { version = "1.42.0", features = ["sync", "fs", "rt-multi-thread"] }
url = "2.5.4"

blake3 = "1.5"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
npyz = { version = "0.9", features = ["npz"] }
tempfile = "3.8"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "image_preprocess"
harness = false
