[package]
name = "llm-multimodal"
version = "1.7.1"
edition = "2021"
description = "Multimodal processing for vision and other modalities"
license = "Apache-2.0"
repository = "https://github.com/vllm-project/llm-multimodal"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
]
keywords = ["vision", "multimodal", "image-processing", "llm"]
categories = ["multimedia::images", "science"]

[lib]
name = "llm_multimodal"

[features]
default = ["native-tls", "hf-hub"]
hf-hub = ["dep:hf-hub"]
native-tls = ["reqwest/native-tls", "hf-hub?/native-tls"]
rustls-tls = ["reqwest/rustls", "hf-hub?/rustls-tls"]
opencv-video = ["dep:opencv"]

[dependencies]
base64 = "0.22"
hf-hub = { version = "0.5.0", default-features = false, features = ["tokio"], optional = true }
bytes = { version = "1.12.0", features = ["serde"] }
fast_image_resize = { version = "6.0.0", features = ["image"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff", "webp"] }
libloading = "0.8"
ndarray = "0.17"
once_cell = "1.21.4"
rayon = "1.12"
rustfft = "6.4"
symphonia = { version = "0.6", default-features = false, features = ["all"] }
opencv = { version = "0.99.0", default-features = false, features = ["clang-runtime", "imgproc", "videoio"], optional = true }
reqwest = { version = "0.13.4", default-features = false, features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = "3.12"
tempfile = "3.27"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync", "fs", "io-util", "rt-multi-thread", "process", "time"] }
tracing = "0.1"
url = "2.5.8"

anyhow = "1.0"
blake3 = "1.8"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
futures = "0.3"
http = "1.4.2"
npyz = { version = "0.9", features = ["npz"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
cc = "1"
pkg-config = "0.3"

[[bench]]
name = "image_preprocess"
harness = false
